--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,11 @@ org.gradle.daemon=false
 minecraft_version=1.20.1
 mod_version=5.1.1
 
+modrinth_id=H1x2EwLg
+curseforge_id=383182
+
 # Forge
-forge_version=47.2.1
+forge_version=47.3.1
 parchment_version=2023.09.03-1.20.1
 
 # CurseForge Deps
