--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,9 @@ org.gradle.daemon=false
 minecraft_version=1.19.2
 mod_version=4.1.2
 
+modrinth_id=H1x2EwLg
+curseforge_id=383182
+
 # Forge
 forge_version=43.2.11
 parchment_version=2022.11.27-1.19.2
