--- a/build.gradle
+++ b/build.gradle
@@ -108,9 +108,7 @@ ext.fetchChangelog = {
     def changes = new StringBuilder("Latest changes ([See all](${repoUrl}/commits/${branch}))\n---")
     def log = "git log --max-count=30 --no-merges --pretty=format:\"* %s ([%h](${repoUrl}/commit/%H))\"".execute()
     log.in.eachLine { line ->
-        if (!line.containsIgnoreCase("version")
-                && !line.containsIgnoreCase("bump")
-                && !line.containsIgnoreCase("update")) { // version change commits should be ignored
+        if (!line.startsWithIgnoreCase("* bump") ) { // version change commits should be ignored
             changes << "\n${line}"
         }
     }
