--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'net.minecraftforge.gradle' version '5.1.+'
+    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id "com.modrinth.minotaur" version "2.+"
     id 'net.darkhax.curseforgegradle' version '1.1.+'
@@ -7,7 +7,10 @@ plugins {
 
 version = project.mod_version
 group = 'terrails.xnetgases'
-archivesBaseName = "xnetgases-${project.minecraft_version}"
+
+base {
+    archivesName = "xnetgases-${project.minecraft_version}"
+}
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
@@ -18,6 +21,7 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
+            args("--width", "1280", "--height", "720")
             property 'forge.logging.console.level', 'debug'
 
             // "SCAN": For mods scan.
@@ -82,20 +86,24 @@ artifacts {
     archives sourcesJar
 }
 
-jar.manifest.attributes([
-        "Specification-Title": "xnetgases",
-        "Specification-Version": "1",
-        "Implementation-Title": project.name,
-        "Implementation-Version": "${version}",
-        "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-])
+tasks.named('jar', Jar).configure {
+    manifest.attributes([
+            "Specification-Title": "xnetgases",
+            "Specification-Version": "1",
+            "Implementation-Title": project.name,
+            "Implementation-Version": "${version}",
+            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+    ])
+}
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
 tasks.register('printChangelog') {
-    println(fetchChangelog())
+    doLast {
+        println(fetchChangelog())
+    }
 }
 
 ext.fetchChangelog = {
