--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,27 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+## Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+org.gradle.jvmargs=-Xmx1G
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=false
 
-# General
-minecraft_version=1.20.1
-mod_version=5.1.4
-
+## General
+minecraft_version=1.21.1
+mod_version=6.0.0
 modrinth_id=H1x2EwLg
 curseforge_id=383182
 
-# Forge
-forge_version=47.3.7
-parchment_version=2023.09.03-1.20.1
+## NeoForge
+neoforge_version=21.1.80
+parchment_version=2024.11.17
 
-# CurseForge Deps
+## Deps
+mekanism_version=1.21.1-10.7.7.64
 
-# 1.20-6.1.4
-xnet_fileId=5443287
-# 1.20-5.0.5
-rftoolsbase_fileId=5613272
-# 1.20-8.0.6
-mcjtylib_fileId=5613231
-# 1.20.1-10.4.8.43
-mekanism_fileId=5395221
+## CurseForge Deps
+# 1.21-7.0.2
+xnet_fileId=5861970
+# 1.21-6.0.1
+rftoolsbase_fileId=5832342
+# 1.21-9.0.4
+mcjtylib_fileId=5832340
