--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
+# Has to be disabled due to the fetchChangelog function
 org.gradle.configuration-cache=false
 
 ## General
